# bookstoreAPI

./: .env.dev  .gitignore  DOCUMENTATION.md  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  env.dev  export_project.py  manage.py  pyproject.toml  requirements.txt  test_db_connection.py
.github/workflows/: build.yml  github-actions-demo.yml  workflow-pr.yml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
bookstore/: settings.py  urls.py  views.py
order/: factories.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: admin.py  factories.py  test_serializers.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
templates/: index.html
