[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Rodrigo Sumioshi <43658223+sumioshi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
psycopg2 = "^2.9"
python = "^3.12"
pytest = "^8.3.2"
factory-boy = "^3.3.0"
django = "^5.1"
djangorestframework = "^3.14.0"
pillow = "^9.0.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.4.6"
whitenoise = "^6.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
